Overflow-x issue
Had a previous issue with the overflow-x on one of the elements, solved it by declaring in the global CSS "*" that overflow-x should be hidden, since I wont be needing sliders, this seems like a nice fix

--- a/styles.scss
+++ b/styles.scss
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
+    overflow-x: hidden;
 }
 $primary: #113255;
 $secondary: #5f7d95;
@@ -90,6 +91,8 @@ nav{
     }
     .btn-container{
         margin-bottom: 54px;
+        display: flex;
+        gap: 20px;
         .primary{
         @include primary-buttons;
         }
@@ -132,9 +135,11 @@ nav{
 }
 
 .steps{
-    width: 100vw;
+    width: 100%;
     background-color: $primary;
     padding: 40px 0;
+    overflow: none;
+    overflow-x: hidden; 
     
     .stepContainer{
     color: white;
